fixed resource heading alignment and added proptypes

--- a/src/page-sections/home/resources-row/resources-row.module.scss
+++ b/src/page-sections/home/resources-row/resources-row.module.scss
@@ -6,6 +6,7 @@
   padding-bottom: 1rem;
   border-bottom: 1px solid #aaa;
   text-transform: uppercase;
+  text-align: left;
 }
 
 .tile {
