--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -22,7 +22,9 @@
 }
 
 .more-analyses-row {
+  padding-top: $margin-45;
   padding-bottom: $margin-45;
+
 
   MainTile {
     margin-top: $margin-15;
